--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello world
+<!DOCTYPE HTML>
+<html>
+<head>
+    <meta charset="utf-8">
+
+    <title>Kaleidoscope</title>
+
+    <meta name="viewport" content="width=device-width">
+
+    <link rel="stylesheet" media="screen" href="css/kaleidoscope.css" >
+
+    <script type="text/javascript" src="js/kaleidoscope.js"></script>
+
+</head>
+<body>
+
+    <div id="kaleidoscope"></div>
+
+    <nav>
+        <a id="fork" href="http://github.com/robertopc/fxos-kaleidoscope" target="_blank">Fork on Github</a>
+        <a id="install" href="http://robertopc.github.io/fxos-kaleidoscope/install.html">Install in your Firefox OS</a>
+    </nav>
+
+</body>
+</html>
