Added: appcache and installer. Removed image and package

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="manifest.appcache">
 <head>
     <meta charset="utf-8">
 
     <title>Kaleidoscope</title>
 
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link rel="stylesheet" media="screen" href="css/kaleidoscope.css" >
-
-    <script type="text/javascript" src="js/kaleidoscope.js"></script>
 
 </head>
 <body>
@@ -20,6 +18,11 @@
         <a id="fork" href="http://github.com/robertopc/fxos-kaleidoscope" target="_blank">Fork on Github</a>
         <a id="install" href="http://robertopc.github.io/fxos-kaleidoscope/install.html">Install in your Firefox OS</a>
     </nav>
+
+    <!-- App Install detection -->
+    <script src="js/app_installer.js"></script>
+
+    <script type="text/javascript" src="js/kaleidoscope.js"></script>
 
 </body>
 </html>
